# agent-2-claude

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-k8s  README.md  __main__.py  app.sh  config.py  context.py  pyproject.toml  requirements.txt  sonar-project.properties
src/aigw-ct/api/: __init__.py  metric_router.py  middleware.py  os_router.py  schemas.py
src/aigw-ct/api/v1/: __init__.py  routers.py  schemas.py  services.py  utils.py
src/aigw-ct/api/v1/nodes/: document_helper.py  ecm.py  nodes.py  prompts.py  schemas.py  utils.py
src/aigw-ct/api/v1/tools/: tools.py  utils.py
src/aigw-ct/core/: exceptions.py  utils.py
src/aigw-ct/logger/: __init__.py  context_vars.py  logger.py  models.py  utils.py
tests/integration_tests/: conftest.py
tests/integration_tests/fixtures/: fixture_v1_client_session.py
tests/integration_tests/v1_api/: constants.py  test_service.py
